<resources>
    <string name="app_name">WorkoutShuffleAndroid</string>
    <string name="welcome_text">Do you even lift bro?</string>
    <string name="selector_welcome_text">That\'s great, brother. What shall we do today?</string>
    <string name="fullBodyButton">Full Body</string>
    <string name="upperButton">Upper Body</string>
    <string name="lowerButton">Lower Body</string>
    <string name="pushButton">Push</string>
    <string name="pullButton">Pull</string>
    <string name="legsButton">Legs</string>
    <string name="firstExerciseText">Exercise 1</string>
    <string name="secondExerciseText">Exercise 2</string>
    <string name="thirdExerciseText">Exercise 3</string>
    <string name="fourthExerciseText">Exercise 4</string>
    <string name="fifthExerciseText">Exercise 5</string>
    <string name="sixthExerciseText">Exercise 6</string>
    <string name="seventhExerciseText">Exercise 7</string>
    <string name="exerciseBoxHeight">70dp</string>
    <string name="exerciseGifWidth">70dp</string>
    <string name="scrollViewHeight">580dp</string>
    <string name="gifsScrollViewWidth">100dp</string>
</resources>