<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/lifter_emoji" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="130dp" android:layout_marginEnd="130dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="581dp"/>
    <ScrollView
            android:layout_width="289dp"
            android:layout_height="578dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:id="@+id/scrollView2">
        <LinearLayout android:layout_width="match_parent" android:layout_height="50sp"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/firstExerciseText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/firstExercise"/>
            <TextView
                    android:text="@string/secondExerciseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/secondExercise"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/thirdExercise"
                    android:text="@string/thirdExerciseText"/>
            <TextView
                    android:text="@string/fourthExerciseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/fourthExercise"/>
            <TextView
                    android:text="@string/fifthExerciseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/fifthExercise"/>
            <TextView
                    android:text="@string/sixthExerciseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/sixthExercise"/>
            <TextView
                    android:text="@string/seventhExerciseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/seventhExercise"/>
        </LinearLayout>
    </ScrollView>
    <ScrollView
            android:layout_width="120dp"
            android:layout_height="578dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="1dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="1dp"
            app:layout_constraintEnd_toStartOf="@+id/scrollView2" android:layout_marginEnd="1dp"
            tools:ignore="SpeakableTextPresentCheck">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/firstExerciseGif"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/secondExerciseGif"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/thirdExerciseGif"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/fourthExerciseGif"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/fifthExerciseGif"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/sixthExerciseGif"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/seventhExerciseGif"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>